force-app/main/default/objects/MSP_Backend_Capacity_Lookup__c/MSP_Backend_Capacity_Lookup__c.object-meta.xml
<CustomObject>
    <label>MSP Backend Capacity Lookup</label>
    <nameField>
        <label>Backend Capacity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSP Backend Capacity Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>