force-app/main/default/objects/MSP_Backend_Capacity_Lookup__c/fields/Back_End_Capacity_TB__c.field-meta.xml
<CustomField>
    <fullName>Back_End_Capacity_TB__c</fullName>
    <label>Back-End Capacity (TB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>