force-app/main/default/objects/MSP_Backend_Capacity_Lookup__c/fields/MSP_usage_capacity__c.field-meta.xml
<CustomField>
    <fullName>MSP_usage_capacity__c</fullName>
    <label>%usage capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>