force-app/main/default/objects/MSP_Backend_Capacity_Lookup__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MSP Backend Capacity Lookup</relationshipLabel>
    <relationshipName>MSP_Backend_Capacity_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>