force-app/main/default/objects/MSP_Backend_Capacity_Lookup__c/fields/SegmentIndex__c.field-meta.xml
<CustomField>
    <fullName>SegmentIndex__c</fullName>
    <label>Segment Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>