force-app/main/default/objects/MSP_Backend_Capacity_Lookup__c/fields/SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionTerm__c</fullName>
    <label>Subscription Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>