force-app/main/default/objects/MSP_Backend_Capacity_Lookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>SubscriptionTerm__c</columns>
    <columns>SegmentIndex__c</columns>
    <columns>Back_End_Capacity_TB__c</columns>
    <columns>MSP_usage_capacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>